# smpl-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  body_models.cpp  body_models.hpp  bodymodel.cpp  bodymodel.hpp  common.hpp  example.cpp  joint_names.cpp  lbs.cpp  lbs.hpp  models.md  npyio.cpp  npyio.hpp  pkl2npz.py  smplx.hpp  utils.hpp  vertex_ids.cpp  vertex_joint_selector.cpp  vertex_joint_selector.hpp
include/: body_models.hpp  common.hpp  lbs.hpp  npyio.hpp  vertex_joint_selector.hpp
